--- a/report/sections/method.tex
+++ b/report/sections/method.tex
@@ -83,13 +83,13 @@ The Decode phase is responsible for reading the patch file and translating it in
         caption={The data structure used to represent the changes in the patch file.},
         label={lst:diff_struct}
         ]
-        typedef struct  
-        {
-            char      opcode;
-            uint16_t  no_words;
-            uint16_t* addr1;
-            uint16_t* addr2;
-            } diff_entry_t;
+typedef struct  
+{
+    char      opcode;
+    uint16_t  no_words;
+    uint16_t* addr1;
+    uint16_t* addr2;
+} diff_entry_t;
     \end{lstlisting}
 \end{framed}
 This data structure is then used in the Apply phase to apply the changes. The Decode phase is also responsible for verifying the integrity of the patch file, which in this research is of limited functionality, simply verifying that the patch file is in the correct format. To keep the implementation predictable in terms of memory usage, memory for the patch file, decoded patch instructions, and data is allocated at compile time in the FRAM of the device.
@@ -99,7 +99,7 @@ The Apply phase is responsible for applying the changes to the binary image. The
 
 The Apply phase is a simple loop that iterates over the changes in the patch file and applies them to the specified addresses. An issue with the implementation is the lack of atomicity in the apply phase. If the update is interrupted, or fails for any reason, the system will be left in an inconsistent state. To counteract this, a rollback mechanism could be implemented using the same \textit{diff} file, but this is left to future work.
 
-\section{Memory layout}\label{sec:memory_layout}
+\section{Memory layout and Compiler options}\label{sec:memory_layout}
 The MSP430FR5994 uses a unified memory model where FRAM, SRAM and registers can be accessed in the same memory space. The memory layout of the MSP430FR5994 can be seen in figure \ref{fig:memory_layout}.
 \begin{figure}[!ht]
     \begin{shaded}
@@ -110,8 +110,27 @@ The MSP430FR5994 uses a unified memory model where FRAM, SRAM and registers can 
 \end{shaded}
 \end{figure}
 
-The figure has been simplified to highlight the important parts of discussion for this research. Essentially, all memory from address 0x4000 and up is the main memory used in any application running on the device. This is where the binary image of the program is stored, and where the update process will take place. The memory space is automatically divided into two sections by the compiler and linker, FRAM (0x4000-0xFFFF) and HIFRAM (0x10000 - 0x43FFF). This is due to the fact that the 16-bit architecture of the microprocessor doesn't natively allow addressing beyond 16-bit memory addresses. Accessing the HIFRAM section is only possible with an extension of the instruction set, using less efficient, emulated instructions. How these sections are used is up to the developer and can be configured in the linker script. 
+The figure has been simplified to highlight the important parts of discussion for this research. Essentially, all memory from address 0x4000 and up is the main memory used in any application running on the device. This is where the binary image of the program is stored, and where the update process will take place. The memory space of the program is automatically divided into two \textit{regions} by the compiler and linker, in addition to the \textit{memory segmentation} commonly found in modern operating systems. These regions are FRAM (0x4000-0xFFFF) and HIFRAM (0x10000 - 0x43FFF). This is due to the fact that the 16-bit architecture of the microprocessor doesn't natively allow addressing beyond 16-bit memory addresses. Accessing the HIFRAM region is only possible with an extension of the instruction set, using less efficient, emulated instructions. How these regions are used is up to the developer and can be configured in the linker script. This may include things such as adding additional \textit{segments}, or configuring where data is placed.
 
-To facilitate an efficient update process, the program should be structured in such a way that the added or removed code affects the rest of the program as little as possible. For example, moving a function in memory requires that all calls to said function are updated, which can be a time-consuming process. Additionally, adding new code within existing functions requires shifting everything directly below it, i.e. at higher addresses. Fortunately, the 2-section structure allows code within the FRAM section to be shifted without affecting the HIFRAM section, as there likely will be unused space between the two sections. However, in this research, the memory layout opted for is to have the DSU functionality in the FRAM section, with all other application code in the HIFRAM section. Using the open source \textit{gcc} compiler, the DSU functions are annotated with the \verb|lower| attribute, which forces the compiler to place the functions in the FRAM section. The program is then compiled with the \verb|-mlarge| and \verb|-mcode-region=upper| options, to place the rest of the program in the HIFRAM section. This way, the DSU code itself is never affected by the update process, which would almost certainly cause the update to fail. 
+To facilitate an efficient update process, the program should be structured in such a way that the added or removed code affects the rest of the program as little as possible. For example, moving a function in memory requires that all calls to said function are updated, which can be a time-consuming process. Additionally, adding new code within existing functions requires shifting everything directly below it, i.e. at higher addresses. Fortunately, the 2-region structure allows code within the FRAM region to be shifted without affecting the HIFRAM region, and vice versa, as there likely will be unused space between the two regions. In our implementation, the DSU functions are placed in the FRAM region, while the application code is placed in the HIFRAM region. This way, the regular application code can be updated without affecting the DSU code, a crucial property for the update process to be reliable. The drawback of this approach is that the application code is not as fast to access as it would be if it was stored in the FRAM region. This is a trade-off that was deemed necessary due to the decrease in complexity of any update performed. 
 
-The drawback of this approach is that the application code is not as fast to access as it would be if it was stored in the FRAM section. This is a trade-off that was deemed necessary due to the decrease in complexity of any update performed.  
+\textbf{Compiler options.} There are multiple different compilers available for the MSP430 platform, including Texas Instruments' proprietary compiler, and the open-source \textit{gcc} compiler. The open-source compiler was chosen for this research due to its availability and the fact that it is free to use. The compiler options and other measures taken to facilitate the memory layout are described below.
+First of all, the DSU functions are annotated with the \verb|lower| and \verb|critical| attributes in the source code. The \verb|lower| attribute is used to place the function in the lower memory region, FRAM, while the \verb|critical| attribute is used to automatically disable interrupts during execution of the functions. An example of how the attributes are used can be seen in listing \ref{lst:lower_attribute}. 
+\newpage
+\begin{framed}
+\begin{lstlisting}[
+    caption={An example of how the \textit{lower} and \textit{critical} attributes are used.},
+    label={lst:lower_attribute}
+]
+#define LOWER_CRITICAL __attribute__((critical, lower))
+
+void LOWER_CRITICAL DSU_function()
+{
+    // DSU code
+}
+\end{lstlisting}
+\end{framed}
+To enable the use of the \verb|lower| attribute in particular, the compiler must be configured to use the \textit{large} memory model. This simply enables the device to use the full 20-bit address space, as opposed to the 16-bit address space that is the default. The \textit{large} memory model is enabled by providing the \verb|-mlarge| flag to the compiler. 
+
+The \verb|-mcode-region| compiler option is used to specify which memory region the code should be placed in. This value will be the default, meaning any code that is not annotated will be placed in the specified region. In this research, the \verb|-mcode-region=upper| option is used to place the application code in the HIFRAM region, as discussed earlier.
+Finally, the \verb|-mdata-region| compiler option can be used to specify where the .data segment should be placed. Since the .data segment contains static and global variables, it is important to place it in the correct region to avoid issues with the update process. Otherwise, the variables would be shifted along with the application code which would necessitate additional mapping of new addresses for each reference. Thus, the \verb|-mdata-region=lower| option is used to place the .data segment in the FRAM region.
